# game_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: main.cpp
include/: Application.hpp  Camera.hpp  Light.hpp  Material.hpp  Mesh.hpp  ModelLoading.hpp  Object.hpp  RenderComponent.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  Transform.hpp  shaders.hpp  texture.hpp  util.hpp
res/shaders/: phongShader.fs  phongShader.vs  phong_fs.glsl  phong_vs.glsl  simpleFShader.fs  simpleVShader.vs  simple_vs.glsl
src/: Application.cpp  Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  ModelLoading.cpp  Object.cpp  RenderComponent.cpp  Scene.cpp  Shader.cpp  main.cpp  shaders.cpp  texture.cpp  util.cpp
